TestSuite/errors/err0279.pas
type TClass = static class(IEnumerable<integer>)
end;

begin
end.